--- a/env/prod.env
+++ b/env/prod.env
@@ -1,4 +1,4 @@
-DB_HOST=acloset-production.caiolzzwhiuc.us-west-1.rds.amazonaws.com
+DB_HOST=dev-acloset-db.caiolzzwhiuc.us-west-1.rds.amazonaws.com
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=koetri322
